--- a/MySite.html
+++ b/MySite.html
@@ -6,6 +6,14 @@
     <title>MyArt</title>
 </head>
 <body>
+    <header>
 
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
