dev: add style to main-page

--- a/MainPage.html
+++ b/MainPage.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <link href="myStyle.css" rel="stylesheet">
     <title>MyArt</title>
 </head>
 <body>
-    <header>
-      <div>
-        MyArt
-<!--        logo image must be here-->
-      </div>
-      <div>Explore</div>
-      <div>Gallery</div>
-      <div>Jobs</div>
-      <div>Events</div>
+    <header class="header-menu">
+        <div class="header-menu-element"><img height="30" src="MyArt_logo.png"></div>
+        <div class="header-menu-element-explore header-menu-element">Explore</div>
+        <div class="header-menu-element-gallery header-menu-element">Gallery</div>
+        <div class="header-menu-element-jobs header-menu-element">Jobs</div>
+        <div class="header-menu-element-events header-menu-element">Events</div>
     </header>
     <main>
       <div><img width="100%" src="mermaid.png"></div>
