dev: add style to main-page

--- a/MainPage.html
+++ b/MainPage.html
@@ -14,7 +14,7 @@
         <div class="header-menu-element-events header-menu-element">Events</div>
     </header>
     <main>
-      <div><img width="100%" src="mermaid.png"></div>
+      <div class="main-bg-img"><img width="100%" src="mermaid.png"></div>
       <div>
 <!--        some featured posts-->
       </div>
