--- a/MainPage.html
+++ b/MainPage.html
@@ -7,11 +7,31 @@
 </head>
 <body>
     <header class="header-menu">
-        <div class="header-menu-element"><img height="30" src="MyArt_logo.png"></div>
-        <div class="header-menu-element-explore header-menu-element">Explore</div>
-        <div class="header-menu-element-gallery header-menu-element">Gallery</div>
-        <div class="header-menu-element-jobs header-menu-element">Jobs</div>
-        <div class="header-menu-element-events header-menu-element">Events</div>
+        <div class="header-menu-left">
+            <div class="header-menu-element">
+                <div class="header-menu-element-logo header-menu-item-icon"></div>
+            </div>
+            <div class="header-menu-element">
+                <div class="header-menu-element-explore-icon header-menu-item-icon"></div>
+                <div class="header-menu-element-explore">Explore</div>
+            </div>
+            <div class="header-menu-element">
+                <div class="header-menu-element-gallery-icon header-menu-item-icon"></div>
+                <div class="header-menu-element-gallery">Gallery</div>
+            </div>
+            <div class="header-menu-element">
+                <div class="header-menu-element-jobs-icon header-menu-item-icon"></div>
+                <div class="header-menu-element-jobs">Jobs</div>
+
+            </div>
+            <div class="header-menu-element">
+                <div class="header-menu-element-events-icon header-menu-item-icon"></div>
+                <div class="header-menu-element-events">Events</div>
+            </div>
+        </div>
+        <div class="header-menu-right">
+
+        </div>
     </header>
     <main>
       <div class="main-bg-img"><img width="100%" src="mermaid.png"></div>
