dev: update style for css 2

--- a/MainPage.html
+++ b/MainPage.html
@@ -34,9 +34,10 @@
         </div>
     </header>
     <main>
-      <div class="main-bg-img"><img width="100%" src="mermaid.png"></div>
+      <div class="main-bg-img"></div>
       <div>
 <!--        some featured posts-->
+
       </div>
     </main>
     <footer>
