dev: adaptive, post creation form, local storage

--- a/pages/MainPage.html
+++ b/pages/MainPage.html
@@ -34,11 +34,17 @@
         </div>
     </header>
     <main>
-      <div class="main-bg-img"></div>
-      <div>
-<!--        some featured posts-->
-
-      </div>
+        <div class="wall main-bg-img">
+        <!--        some featured posts-->
+            <div class="wall-item">
+                <img src="mermaid.png">
+                <h2>Mermaid explorer</h2>
+            </div>
+            <div class="wall-item">
+                <img src="adventure.png">
+                <h2>Adventure</h2>
+            </div>
+        </div>
     </main>
     <footer>
       Sponsored by Me&My$elf
