--- a/index.html
+++ b/index.html
@@ -6,88 +6,78 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
     <title>MyArt</title>
     <script src="js/index.js"></script>
 </head>
 <body>
 
 <header class="header">
-  <nav class="nav container ">
-    <ul class="menu-list">
-      <li class="menu-item logo">
-          <a href="#">
+    <nav class="nav">
 
-          </a>
-          <img src="img/Logo.svg" alt="logo">
-      </li>
-      <li class="menu-item text-color-azure">
-          <img src="img/icon-explore.svg" alt="explore">
-          <p>Explore</p>
-      </li>
-      <li class="menu-item text-color-blue">
-          <img src="img/icon-gallery.svg" alt="explore">
-          <p>Gallery</p>
-      </li>
-      <li class="menu-item text-color-cyan">
-          <img src="img/icon-jobs.svg" alt="explore">
-          <p>Jobs</p>
-      </li>
-      <li class="menu-item text-color-marine">
-          <img src="img/icon-events.svg" alt="explore">
-          <p>Events</p>
-      </li>
-    </ul>
-      <div class="menu-profile">
-          <button class="btn-add-post" id="btn-add-post"><img src="img/icon-add-post.svg" alt="add-post"></button>
-          <button class="btn-profile">
-              <a href="pages/profile.html">
-                  <img src="img/icon-profile.svg" alt="profile">
-              </a>
-          </button>
-      </div>
-  </nav>
+        <ul class="menu-list">
+            <li class="menu-item logo">
+                <p>MY</p>
+                <a href="#">
+                    <img src="img/logo.svg" alt="logo">
+                </a>
+                <p>ART</p>
+            </li>
+            <li class="menu-item text-color-azure">
+              <img src="img/icon-explore.svg" alt="explore">
+              <p>Explore</p>
+            </li>
+            <li class="menu-item text-color-blue">
+              <img src="img/icon-gallery.svg" alt="explore">
+              <p>Gallery</p>
+            </li>
+            <li class="menu-item text-color-cyan">
+              <img src="img/icon-jobs.svg" alt="explore">
+              <p>Jobs</p>
+            </li>
+            <li class="menu-item text-color-marine">
+              <img src="img/icon-events.svg" alt="explore">
+              <p>Events</p>
+            </li>
+        </ul>
+            <div class="menu-profile">
+                <button class="btn-add-post" id="btn-add-post"><img src="img/icon-add-post.svg" alt="add-post"></button>
+                <button class="btn-profile">
+                  <a href="pages/profile.html">
+                      <img src="img/icon-profile.svg" alt="profile">
+                  </a>
+                </button>
+            </div>
+    </nav>
 </header>
 <main>
     <form onsubmit="#" class="form-constructor" id="form">
-        <button type="button" id="btn-close">x</button>
+        <button type="button" id="form-btn-close" class="btn-close">x</button>
         <label for="title-input">Post title</label>
         <input type="text" id="title-input" placeholder="Title">
         <label for="imgUrl-input">Image Url</label>
         <input type="text" id="imgUrl-input" placeholder="URL">
         <label for="description-input">Post description</label>
-        <input type="text" id="description-input" placeholder="Description">
+        <textarea type="text" id="description-input" placeholder="Description"></textarea>
         <button type="button" id="add-post">Create Post</button>
 
     </form>
     <section id= "wall" class="wall container">
-        <div class="post  col-lg-10">
-            <img src="img/adventure.png" alt="adventure">
-            <div class = "post-description">
-                <h2>title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet consectetur consequatur cum debitis dolorem esse et fugiat itaque magnam natus officiis quasi quidem, quos, saepe totam velit veniam voluptatibus.</p>
-            </div>
-        </div>
-        <div class="post  col-lg-10">
-            <img src="img/adventure.png" alt="adventure">
-            <div class = "post-description">
-                <h2>title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet consectetur consequatur cum debitis dolorem esse et fugiat itaque magnam natus officiis quasi quidem, quos, saepe totam velit veniam voluptatibus.</p>
-            </div>
-        </div>
-        <div class="post  col-lg-10">
-            <img src="img/profile-pic.png" alt="adventure">
-            <div class = "post-description">
-                <h2>title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet consectetur consequatur cum debitis dolorem esse et fugiat itaque magnam natus officiis quasi quidem, quos, saepe totam velit veniam voluptatibus.</p>
-            </div>
-        </div>
-
         <form class="constructor">
 
         </form>
 <!--        <button id="add_post"></button>-->
     </section>
+    <div id="shot-placeholder" class="shot-overlay">
+        <div class="shot-container">
+            <div class="shot-content">
+                <button type="button" id="shot-btn-close" class="btn-close">x</button>
+                <h2></h2>
+                <img src="" alt="">
+                <p class="shot-description"></p>
+            </div>
+        </div>
+    </div>
+
 </main>
 <footer>
     <p id="time-load"></p>
